v1.3.0/SUMMARY.md
# Table of contents

* [👋 Introduction](README.md)

## Product Specifications

* [Functional Architecture](product-specifications/functional-architecture.md)
* [Workflow management](product-specifications/workflow-management.md)
* [Status Flow Diagram](product-specifications/status-flow-diagram.md)
* [Users](product-specifications/users/README.md)
  * [Examples](product-specifications/users/examples.md)
* [Core functions](product-specifications/core-functions/README.md)
  * [1. Notify event](product-specifications/core-functions/1.-notify-event.md)
  * [2. Declare event](product-specifications/core-functions/2.-declare-event.md)
  * [3. Validate event](product-specifications/core-functions/3.-validate-event.md)
  * [4. Register event](product-specifications/core-functions/4.-register-event.md)
  * [5. Print certificate](product-specifications/core-functions/5.-print-certificate.md)
  * [5. Issue certificate](product-specifications/core-functions/5.-issue-certificate.md)
  * [6. Search for a record](product-specifications/core-functions/6.-search-for-a-record.md)
  * [7. View record](product-specifications/core-functions/7.-view-record.md)
  * [8. Correct record](product-specifications/core-functions/8.-correct-record.md)
  * [9. Verify record](product-specifications/core-functions/9.-verify-record.md)
  * [10. Archive record](product-specifications/core-functions/10.-archive-record.md)
  * [11. Vital statistics export](product-specifications/core-functions/11.-vital-statistics-export.md)
* [Support functions](product-specifications/support-functions/README.md)
  * [10. Login](product-specifications/support-functions/10.-login.md)
  * [11. Audit](product-specifications/support-functions/11.-audit.md)
  * [12. Deduplication](product-specifications/support-functions/12.-deduplication.md)
  * [13. Performance management](product-specifications/support-functions/13.-performance-management.md)
  * [14. Payment](product-specifications/support-functions/14.-payment.md)
  * [15. Learning](product-specifications/support-functions/15.-learning.md)
  * [16. User support](product-specifications/support-functions/16.-user-support.md)
* [Admin functions](product-specifications/admin-functions/README.md)
  * [17. User management](product-specifications/admin-functions/17.-user-management.md)
  * [18. Comms management](product-specifications/admin-functions/18.-comms-management.md)
  * [19. Content management](product-specifications/admin-functions/19.-content-management.md)
  * [20. Config management](product-specifications/admin-functions/20.-config-management.md)
* [Data functions](product-specifications/data-functions/README.md)
  * [21. Legacy data import](product-specifications/data-functions/21.-legacy-data-import.md)
  * [22. Legacy paper import](product-specifications/data-functions/22.-legacy-paper-import.md)

## Technology

* [Architecture](technology/architecture/README.md)
  * [Performance tests](technology/architecture/performance-tests.md)
* [Standards](technology/standards/README.md)
  * [FHIR Documents](technology/standards/fhir-documents/README.md)
    * [Event Composition](technology/standards/fhir-documents/event-composition.md)
    * [Person](technology/standards/fhir-documents/person.md)
    * [Registration Task](technology/standards/fhir-documents/registration-task.md)
    * [Event Observations](technology/standards/fhir-documents/event-observations.md)
    * [Locations](technology/standards/fhir-documents/locations.md)
* [Security](technology/security.md)
* [Interoperability](technology/interoperability/README.md)
  * [Create a client](technology/interoperability/create-a-client.md)
  * [Authenticate a client](technology/interoperability/authenticate-a-client.md)
  * [Event Notification clients](technology/interoperability/event-notification-clients.md)
  * [Record Search clients](technology/interoperability/record-search-clients.md)
  * [Webhook clients](technology/interoperability/webhook-clients.md)
  * [National ID client](technology/interoperability/national-id-client.md)
  * [FHIR Location REST API](technology/interoperability/fhir-location-rest-api.md)
  * [Other ways to interoperate](technology/interoperability/other-ways-to-interoperate.md)

## Default configuration

* [Intro to Farajaland](default-configuration/intro-to-farajaland.md)
* [Civil registration in Farajaland](default-configuration/civil-registration-in-farajaland.md)
* [OpenCRVS configuration in Farajaland](default-configuration/opencrvs-configuration-in-farajaland/README.md)
  * [User / role mapping](default-configuration/opencrvs-configuration-in-farajaland/user-role-mapping.md)
  * [Application settings](default-configuration/opencrvs-configuration-in-farajaland/application-settings.md)
  * [Declaration forms](default-configuration/opencrvs-configuration-in-farajaland/declaration-forms.md)
  * [Certificate templates](default-configuration/opencrvs-configuration-in-farajaland/certificate-templates.md)
* [Business process flows in Farajaland](default-configuration/business-process-flows-in-farajaland.md)

## Setup

* [1. Establish team](setup/1.-establish-team.md)
* [2. Gather requirements](setup/2.-gather-requirements.md)
* [3. Installation](setup/3.-installation/README.md)
  * [3.1 Set-up a local development environment](setup/3.-installation/3.1-set-up-a-development-environment/README.md)
    * [3.1.1 Install the required dependencies](setup/3.-installation/3.1-set-up-a-development-environment/3.1.1-install-the-required-dependencies.md)
    * [3.1.2 Install OpenCRVS locally](setup/3.-installation/3.1-set-up-a-development-environment/3.1.2-install-opencrvs-locally.md)
    * [3.1.3 Starting and stopping OpenCRVS](setup/3.-installation/3.1-set-up-a-development-environment/3.1.3-starting-and-stopping-opencrvs.md)
    * [3.1.4 Log in to OpenCRVS locally](setup/3.-installation/3.1-set-up-a-development-environment/3.1.4-log-in-to-opencrvs-locally.md)
    * [3.1.5 Tooling](setup/3.-installation/3.1-set-up-a-development-environment/3.1.5-tooling.md)
  * [3.2 Set-up your own country configuration](setup/3.-installation/3.2-set-up-your-own-country-configuration/README.md)
    * [3.2.1 Fork your own country configuration repository](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.1-fork-your-own-country-configuration-repository.md)
    * [3.2.2 Set up administrative address divisions](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.2-set-up-administrative-address-divisions/README.md)
      * [3.2.2.1 Prepare source file for administrative structure](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.2-set-up-administrative-address-divisions/3.2.2.1-prepare-source-file-for-administrative-structure.md)
      * [3.2.2.2 Prepare source file for statistics](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.2-set-up-administrative-address-divisions/3.2.2.2-prepare-source-file-for-statistics.md)
    * [3.2.3 Set up CR offices and Health facilities](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.3-set-up-cr-offices-and-health-facilities/README.md)
      * [3.2.3.1 Prepare source file for CRVS Office facilities](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.3-set-up-cr-offices-and-health-facilities/3.2.3.1-prepare-source-file-for-crvs-office-facilities.md)
      * [3.2.3.2 Prepare source file for health facilities](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.3-set-up-cr-offices-and-health-facilities/3.2.3.2-prepare-source-file-for-health-facilities.md)
    * [3.2.4 Set up employees & roles for testing or production](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.4-set-up-employees-for-testing-or-production/README.md)
      * [3.2.3.1 Prepare source file for employees](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.4-set-up-employees-for-testing-or-production/3.2.3.1-prepare-source-file-for-test-employees.md)
      * [3.2.3.2 Configure role titles](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.4-set-up-employees-for-testing-or-production/3.2.3.2-configure-role-titles.md)
    * [3.2.5 Set up application settings](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings/README.md)
      * [3.2.5.1 Configuring Metabase Dashboards](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.5-set-up-application-settings/3.2.5.1-configuring-metabase-dashboards.md)
    * [3.2.6 Configure certificate templates](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.6-configure-certificate-templates.md)
    * [3.2.7 Configure declaration forms](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.7-configure-declaration-forms/README.md)
      * [3.2.7.1 Configuring an event form](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.7-configure-declaration-forms/3.2.7.1-configuring-an-event-form.md)
    * [3.2.8 Seeding your local development environment database](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.8-seeding-your-local-database/README.md)
      * [3.2.8.1 Clearing your local development environment database](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.8-seeding-your-local-database/3.2.8.1-clearing-and-restoring-a-local-environment-to-factory-reset-data.md)
    * [3.2.9 Countryconfig APIs explained](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.9-countryconfig-apis-explained/README.md)
      * [3.2.9.1 Managing language content](setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.9-countryconfig-apis-explained/3.2.9.1-managing-language-content.md)
  * [3.3 Set-up a server-hosted environment](setup/3.-installation/3.3-set-up-a-server-hosted-environment/README.md)
    * [3.3.1 Provision your server nodes with SSH access](setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.1-provision-your-server-nodes-with-ssh-access.md)
    * [3.3.2 Provision environment](setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.2-install-dependencies.md)
    * [3.3.3 Provision a comms gateway](setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.3-provision-a-comms-gateway.md)
    * [3.3.4 Set up an SMTP server for OpenCRVS monitoring alerts](setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.4-set-up-an-smtp-server-for-opencrvs-monitoring-alerts.md)
    * [3.3.5 Setup DNS A records](setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.5-setup-dns-a-records.md)
    * [3.3.6 Deploy (Automated & Manual)](setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.6-deploy-automated-and-manual.md)
    * [3.3.7 Seeding & clearing data on a server](setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.7-seeding-and-clearing-data-on-a-server.md)
    * [3.3.8 Automated & manual backup and manual restore](setup/3.-installation/3.3-set-up-a-server-hosted-environment/3.3.8-automated-and-manual-backup-and-manual-restore.md)
* [4. Functional configuration](setup/4.-functional-configuration/README.md)
  * [4.1 Configure application settings](setup/4.-functional-configuration/4.1-configure-application-settings.md)
  * [4.2 Configure registration periods and fees](setup/4.-functional-configuration/4.2-configure-registration-periods-and-fees.md)
  * [4.3 Create new user roles](setup/4.-functional-configuration/4.3-create-new-user-roles.md)
  * [4.4 Managing system users](setup/4.-functional-configuration/4.5-create-system-users.md)
* [5. Testing](setup/5.-testing.md)
* [6. Go-live](setup/6.-go-live.md)
* [7. Monitoring](setup/7.-monitoring/README.md)
  * [7.1 Application logs](setup/7.-monitoring/7.1-application-logs.md)
  * [7.2 Infrastructure health](setup/7.-monitoring/7.2-infrastructure-health.md)
  * [7.3 Routine monitoring checklist](setup/7.-monitoring/7.3-routine-monitoring-checklist.md)
  * [7.4 Setting up alerts](setup/7.-monitoring/7.4-setting-up-alerts.md)
  * [7.5 Managing a Docker Swarm](setup/7.-monitoring/7.5-managing-a-docker-swarm.md)

## General

* [Contributing](general/contributing.md)
* [Releases](general/releases/README.md)
  * [v1.3.5: Release notes](general/releases/v1.3.5-release-notes.md)
  * [v1.3.4: Release notes](general/releases/v1.3.4-release-notes.md)
  * [v1.3.2: Release notes](general/releases/v1.3.2-release-notes.md)
  * [v1.3.1: Release notes](general/releases/v1.3.1-release-notes.md)
  * [v1.3.\* to v1.3.\* Migration notes](general/releases/v1.3.-to-v1.3.-migration-notes.md)
  * [v1.3.0: Release notes](general/releases/v1.3.0-beta-release-notes.md)
  * [v1.2.\* to v1.3.\* Migration notes](general/releases/v1.2.-to-v1.3.-migration-notes/README.md)
    * [v1.2 to v1.3: Form migration](general/releases/v1.2.-to-v1.3.-migration-notes/v1.2-to-v1.3-form-migration.md)
  * [v1.2.1: Release notes](general/releases/v1.2.1-release-notes.md)
  * [Patch: Elasticsearch 7.10.2](general/releases/patch-elasticsearch-7.10.2.md)
  * [v1.2.0: Release notes](general/releases/v1.2.0-release-notes.md)
  * [v1.1.\* to v1.2.\* Migration notes](general/releases/v1.1.-to-v1.2.-migration-notes.md)
  * [v.1.1.2: Release notes](general/releases/v.1.1.2-release-notes.md)
  * [v.1.1.1: Release notes](general/releases/v.1.1.1-release-notes.md)
  * [v1.1.0: Release notes](general/releases/v1.1.0-release-notes.md)
* [Interoperability roadmap](general/interoperability-roadmap.md)
* [Product roadmap](general/product-roadmap.md)
